chore: add demo title & fix link z-index

--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -24,6 +24,7 @@
 
 .HomeLink {
   color: #61dafb;
+  z-index: 1; /* fix covered by rotating logo */
 }
 
 .Editor {
